policies/gatekeeper-template-idp-crossplane.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: appscaling
  annotations:
    metadata.gatekeeper.sh/title: dot app scaling
    metadata.gatekeeper.sh/category: App
    metadata.gatekeeper.sh/severity: medium
    description: Validates that scaling is enabled.
spec:
  crd:
    spec:
      names:
        kind: AppScaling
      validation:
        openAPIV3Schema:
          type: object
          properties:
            min:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package appscaling

        violation[{"msg": msg}] {
          not input.review.object.spec.parameters.scaling
          msg := "`spec.parameters.scaling` must be defined."
        }

        violation[{"msg": msg}] {
          not input.review.object.spec.parameters.scaling.enabled
          msg := "`spec.parameters.scaling.enabled` must be set to `true`."
        }

        violation[{"msg": msg}] {
          expected := input.parameters.min
          actual := input.review.object.spec.parameters.scaling.min
          actual < expected
          msg := sprintf("`spec.parameters.scaling.min` must be greater than or equal to `%v`.", [expected])
        }
