policies/kubewarden.yaml
---
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: dbcluster
  annotations:
    policies.kubewarden.io/title: Require Small, Medium, or Large DB size
    policies.kubewarden.io/category: DB
    policies.kubewarden.io/severity: high
    policies.kubewarden.io/subject: SQLClaim
    policies.kubewarden.io/description: >-
      SQLClaims must have small, medium, or large database size.
spec:
  module: registry://c8n.io/vfarcic/kubewarden-crossplane-sql:v0.0.2
  rules:
    - apiGroups: ["devopstoolkitseries.com"]
      apiVersions: ["v1alpha1"]
      resources: ["sqlclaims", "sqls"]
      operations:
        - CREATE
        - UPDATE
  mutating: false
  settings:
    allowed_sizes: ["small", "medium", "large"]
