policies/kyverno.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deployment-production
  annotations:
    policies.kyverno.io/title: Require Multiple Replicas
    policies.kyverno.io/category: App
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Deployment
    policies.kyverno.io/description: >-
      Deployments with a single replica cannot be highly available and thus the application may suffer downtime if that one replica goes down.
      This policy validates that Deployments have more than one replica.      
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: deployment-has-multiple-replicas
    match:
      resources:
        kinds:
        - Deployment
        namespaces:
          - production
    validate:
      message: "Deployments should have more than one replica to ensure availability."
      pattern:
        spec:
          replicas: ">2"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: db-cluster
  annotations:
    policies.kyverno.io/title: Require Small, Medium, or Large DB size
    policies.kyverno.io/category: DB
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: SQLClaim
    policies.kyverno.io/description: >-
      SQLClaims must have small, medium, or large database size.
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: db-must-have-proper-size
    match:
      resources:
        kinds:
        - SQLClaim
        - SQL
    validate:
      message: SQLClaims must have small, medium, or large database size.
      pattern:
        spec:
          parameters:
            size: "small|medium|large"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: db-production
  annotations:
    policies.kyverno.io/title: Require Medium or Large DB size
    policies.kyverno.io/category: DB
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: SQLClaim
    policies.kyverno.io/description: >-
      SQLClaims with small database instances are not reliable and thus cannot be used in production.
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: db-cannot-be-small
    match:
      resources:
        kinds:
        - SQLClaim
        namespaces:
          - production
    validate:
      message: SQLClaims with small database instances are not reliable and thus cannot be used in production.
      pattern:
        spec:
          parameters:
            size: "!small"
