policies/vap.yaml
---
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: deploymentproduction
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
  validations:
  - expression: "object.spec.replicas > 2"
    message: "Deployments should have more than two replicas to ensure availability."
---
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: deploymentproduction
spec:
  policyName: deploymentproduction
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: production
